update sample Heroku config and gem config

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,6 @@
-log/*.log
-config/thin.yml
-config/deploy.rb
-config/config.yml
-dist
-coverage
-exports
-*.db
-*.gem
-*.swp
-*.log
-.aggregated_coverage_report
-tmp/
-bin
-vendor
-doc/integrity.html
-builds
-.sass-cache
-public/integrity.css
+.bundle/*
 Gemfile.lock
-.bundle/
+.sass-cache/
+integrity.db
+integrity.log
+public/integrity.css
